# lab

./: .gitignore  README.md  pyproject.toml  railway.toml
.github/workflows/: anomalies.yml  build_post.yml  ci.yml  forward.yml  ingest_papers.yml  publish.yml  seasons.yml  sp500.yml
deploy/: Dockerfile.grader  clear_execstack.py  compute_anomaly_stats.py  expand_anomalies.py  forward_runner.py  grader_worker.py  roll_seasons.py  seed_demo_cohort.py  seed_open_competitions.py  sp500_runner.py
examples/: lab_demo.py
notebooks/: factor_reconstruction.ipynb  single_name_momentum.ipynb
pipeline/: README.md  WIKI_FORMATS.md  author_canonical_wikis.py  author_canonical_wikis_2.py  author_canonical_wikis_3.py  author_canonical_wikis_4.py  author_canonical_wikis_5.py  author_canonical_wikis_6.py  author_canonical_wikis_7.py  author_canonical_wikis_8.py  author_canonical_wikis_9.py  author_landmark_wikis_1.py  author_landmark_wikis_2.py  author_replication_wikis.py  curate_relevance.py  download_pdfs.py  expand_citations.py  fetch_full_text.py  generate_factor_wiki.py  import_wikis.py  ingest_finance_papers.py  ingest_ml_venues.py  ingest_openalex_journals.py  ingest_working_papers.py  publish_content.py  seed_contributions.py  seed_landmark_papers.py  seed_osap_papers.py
posts/: render_post.py  writeback_post.py
posts/examples/: README.md  crypto_orderbook.ipynb  low_volatility.ipynb  momentum_value_survives.ipynb  multifactor_long_short.ipynb  short_term_reversal.ipynb
posts/template/: README.md  post.ipynb
tests/: test_multilang_julia.py  test_multilang_r.py
(+18 files in other folders)
