[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "convexpi-lab"
version = "0.1.3"
description = "ConvexPi Lab — synthetic equity panel, backtester, and anti-overfitting grader"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["finance", "quant", "backtesting", "alpha", "factor-model", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "hatch",
]
real-data = [
    "yfinance>=0.2",
    "pandas-datareader>=0.10",
]
deploy = [
    "supabase>=2.0",
    "sentry-sdk>=2.0",
]

[project.urls]
Homepage      = "https://convexpi.ai"
Repository    = "https://github.com/convexpi/lab"
Documentation = "https://convexpi.ai/docs"
"Bug Tracker" = "https://github.com/convexpi/lab/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/convexpi/lab"]

[tool.hatch.build.targets.wheel.sources]
"src/convexpi/lab" = "convexpi/lab"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
